2021/CVE-2021-34824/manifests/a/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw-a
  namespace: ns-a
spec:
  selector:
    istio: gw-a
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: foo-dot-com
    hosts:
    - foo.com
